microservice-produit init 2

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -7,8 +7,8 @@ spring.h2.console.enabled=true
 spring.datascurce.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring. datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H20ialect
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibermate.ddl-auto=none
 
 #Nos contigurations
