--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,15 +1,9 @@
-server.port=9001
-
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
-spring.datascurce.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibermate.ddl-auto=none
-
-#Nos contigurations
-mes-configs.limitDeProduits=4
+spring.datasource.sql-script-encoding=UTF-8
+#Les configurations exetrenalisés
+mes-configs.limitDeProduits= 4
+#Configuration Actuator
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=refresh
