TP 4.1 Eureka Server v2

--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,8 +1,15 @@
+# Configuration du port pour l'application
 server.port=9102
+
+# Nom de l'application
 spring.application.name=eureka-server
-#Single eureka mode, and note Cluster mode
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+
+# Désactivation de l'enregistrement du serveur Eureka auprès d'autres instances (serveur autonome)
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+# Désactivation de l'importation automatique des configurations de Spring Cloud Config (si non nécessaire)
 spring.cloud.config.import-check.enabled=false
-#To avoid eureka server Connect to localhost:8761 timed out
-eureka.server.maxThreadsForPeerReplication=0
+
+# Configuration des threads pour la réplication entre pairs (0 pour désactiver si pas en cluster)
+eureka.server.max-threads-for-peer-replication=0
