TP 4.1 Eureka Server v2

--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,15 +1,8 @@
-# Configuration du port pour l'application
-server.port=9102
-
-# Nom de l'application
+server.port= 9102
 spring.application.name=eureka-server
-
-# Désactivation de l'enregistrement du serveur Eureka auprès d'autres instances (serveur autonome)
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-# Désactivation de l'importation automatique des configurations de Spring Cloud Config (si non nécessaire)
+# Single eureka mode, and note Cluster mode
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 spring.cloud.config.import-check.enabled=false
-
-# Configuration des threads pour la réplication entre pairs (0 pour désactiver si pas en cluster)
-eureka.server.max-threads-for-peer-replication=0
+#To avoid eureka server Connect to localhost:8761 timed out
+eureka.server.maxThreadsForPeerReplication=0
