circuit breaker commit

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,11 +1,31 @@
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:mytestdb
+
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
+
 #Eureka :indique l'URL d'Eureka à laquelle il faut s'enregistrer
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+
 #Actuator : management.endpoints.web.exposure.include=*
 management.endpoints.web.expose=info, health, refresh
+
 #Les configurations personnalisés
 mes-configs.limitDeProduits= 3
+
+# Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.messageService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.messageService.waitDurationInOpenState=1000ms
+resilience4j.circuitbreaker.instances.messageService.permittedNumberOfCallsInHalfOpenState=2
+resilience4j.circuitbreaker.instances.messageService.slidingWindowSize=2
+resilience4j.circuitbreaker.instances.messageService.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.messageService.minimumNumberOfCalls=2
+resilience4j.circuitbreaker.instances.messageService.recordExceptions=java.io.IOException,java.util.concurrent.TimeoutException
+
+# Time Limiter Configuration
+resilience4j.timelimiter.instances.messageService.timeoutDuration=1000ms
+
+logging.level.io.github.resilience4j=DEBUG
+
