--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -16,11 +16,11 @@ management.endpoints.web.expose=info, health, refresh
 mes-configs.limitDeProduits= 3
 
 # Circuit Breaker Configuration
-resilience4j.circuitbreaker.instances.messageService.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.messageService.waitDurationInOpenState=1000ms
+resilience4j.circuitbreaker.instances.productController.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productController.waitDurationInOpenState=1000ms
 
 # Time Limiter Configuration
-resilience4j.timelimiter.instances.messageService.timeoutDuration=1000ms
+resilience4j.timelimiter.instances.productController.timeoutDuration=1000ms
 
 logging.level.io.github.resilience4j=DEBUG
 
