circuit breaker commit 6

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -17,3 +17,12 @@ mes-configs.limitDeProduits= 3
 
 logging.level.io.github.resilience4j=DEBUG
 
+# Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.productsService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productsService.waitDurationInOpenState=1000ms
+
+# Time Limiter Configuration
+resilience4j.timelimiter.instances.productsService.timeoutDuration=1000ms
+
+
+
