circuit breaker commit 7

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -15,6 +15,7 @@ management.endpoints.web.expose=info, health, refresh
 #Les configurations personnalisés
 mes-configs.limitDeProduits= 3
 
+logging.level.org.springframework=DEBUG
 logging.level.io.github.resilience4j=DEBUG
 
 # Circuit Breaker Configuration
