--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -13,9 +13,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 management.endpoints.web.expose=info, health, refresh
 
 #Les configurations personnalisés
-mes-configs.limitDeProduits= 3
+mes-config-ms.commandes-last=10
 
-logging.level.org.springframework=DEBUG
 
 
 
