--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -1,7 +1,11 @@
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:mytestdb
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
