--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -4,8 +4,9 @@ spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:mytestdb
+spring.datasource.url=jdbc:h2:mem:produitDB;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialization-mode=always
 
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
