--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -7,6 +7,8 @@ spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:produitDB;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:data.sql
 
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
