--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -4,14 +4,8 @@ spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:mytestdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+spring.datasource.url=jdbc:h2:mem:mytestdb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:schema.sql
-spring.datasource.data=classpath:data.sql
-
-#defini l'encodage pour data.sql
-spring.datasource.sql-script-encoding=UTF-8
 
 #Eureka :indique l'URL d'Eureka à laquelle il faut s'enregistrer
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
