--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
 #Actuator : management.endpoints.web.exposure.include=*
-management.endpoints.web.expose=info, health, refresh
+management.endpoints.web.expose.include=*
 
 #Les configurations personnalisés
 mes-configs.limitDeProduits= 5
