micro-service commande v13

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -10,8 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #Eureka :indique l'URL d'Eureka à laquelle il faut s'enregistrer
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
-#Actuator : management.endpoints.web.exposure.include=*
-management.endpoints.web.expose.include=refresh
+#Actuator
+management.endpoints.web.exposure.include=health,info,refresh
+management.endpoint.refresh.enabled=true
 
 #Les configurations personnalisés
 mes-configs.limitDeProduits= 5
