--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -17,6 +17,13 @@ management.endpoint.refresh.enabled=true
 #Les configurations personnalisés
 mes-config.limitDeCommandes=5
 
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.commandesCircuitBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.commandesCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.commandesCircuitBreaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.commandesCircuitBreaker.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.commandesCircuitBreaker.permittedNumberOfCallsInHalfOpenState=10
+
 
 
 
